----------
v4.2.0-git
----------

[jan] Don't remove missing contacts from distributions lists in Kolab backends
      (Bug #12861).
[jan] Support binary fields (photos) in Kolab backends.
[mms] Allow tagging system to be disabled via configuration option.
[mjr] Fix importing certain vCards to sources only using the 'email' attribute
      (Bug #12955).
[mjr] Do not export empty property names in CardDav responses (Bug #12782).
[jan] Make shares table compatible with Oracle.
[jan] Export free/busy URL to vCard (Request #12915).
[mjr] Fix listTimeObjects API when format_in attribute parameter is changed
      from default (Bug #11891).
[mjr] Add API support for supporting multiple addressbooks via ActiveSync.
[jan] Remember currently open tab when switching or saving contact views
      (Request #12609).
[jan] Replace categories with tags (Request #9544).


------
v4.1.3
------

[jan] SECURITY: Fix XSS vulnerabilities when deleting address books.
[jan] Fix exporting selected contacts (Bug #12759).
[mms] Improved UI when viewing search results from Advanced Search.
[mms] Remove features from UI when VFS is not available or disabled.
[mjr] Fix filtering Facebook driver results (Bug #12739).
[jan] Gracefully deal with columns removed from the backend.


------
v4.1.2
------

[jan] Fix fatal errors if DAV support is disabled (Bug #12481).
[mjr] Fix deleting multiple contacts via the API (Bug #12554).
[mjr] Fix issue generating contact hashes from EAS contacts that could prevent
      duplicate contact detection from working when certain properties have
      empty values (Bug #12506).


------
v4.1.1
------

[jan] Import and export UID vCard attributes (Bug #12427).
[mjr] Honor the 'browse' setting when attempting empty searches.
[jan] Set generic 'phone' attribute when importing from vCard (Bug #12329).
[mjr] Add API methods for using history modification sequences.


------
v4.1.0
------

[jan] Fix searching in LDAP address books (Bug #12297).


---------
v4.1.0RC1